--- a/FrontEnd/src/Components/AboutPage/About.css
+++ b/FrontEnd/src/Components/AboutPage/About.css
@@ -49,7 +49,7 @@
           padding: 1rem 0;
           label {
             padding-bottom: 1rem;
-            font-size: var(--normalFontSize);
+            font-size: 20px;
             color: var(--blackColor);
             font-weight: 500;
           }
@@ -58,7 +58,7 @@
           textarea {
             outline: none;
             border: none;
-            width: 200px;
+            width: 300px;
             padding: 0.8rem;
             background: var(--cardColor);
             border-radius: var(--borderRadius);
@@ -72,7 +72,7 @@
             transition: 0.3s ease;
   
             &::placeholder {
-              font-size: var(--smallFontSize);
+              font-size: 20px;
             }
           }
           textarea {
@@ -81,6 +81,7 @@
         }
         .btn {
           width: 100%;
+          font-size: 20px;
         }
       }
     }
