--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -7,14 +7,10 @@
 }
 
 h3 {
-  color: blue;
+  color: #3f6c29;
 }
 
 :root {
-  --bgColor: #f5f5f5;
-  --primaryColor: #708871;
-  --primaryColorLight: #BEC6A0;
-  --formColor: #ecdad1;
   --whiteColor: hsl(0, 0%, 100%);
   --blackColor: hsl(0, 0%, 18%);
   --greyText: hsl(0, 0%, 75%);
